--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -277,7 +277,7 @@
                                         </div>            
                                     </div>
                                     <div class="pie-modal">
-                                        <div class="col-xs-12 col-md-6 center"><a data-toggle="modal" data-target="#myModal4"><h5>#{msjGestec.contraOlvidada}</h5></a></div>
+                                        <div class="col-xs-12 col-md-6 center"><a href="#{request.contextPath}/faces/gestec/usuario/recuperar_contra.xhtml"><h5>#{msjGestec.contraOlvidada}</h5></a></div>
                                         <div class="col-xs-12  col-md-6 center"><a data-toggle="modal" data-target="#myModal3"><h5>#{msjGestec.userBloqueado}</h5></a></div>
 
                                         <div class="center">
@@ -463,7 +463,7 @@
                         </div>
                     </div>
 
-                    <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                    <!--<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -507,7 +507,7 @@
 
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>   
         </f:view>
